force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Donor_Display_Setting__mdt/fields/ucinn_ascendv2__Column_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Column_Type__c</fullName>
    <description>The data that the field should be grouped with.</description>
    <inlineHelpText>The data that the field should be grouped with.</inlineHelpText>
    <label>Column Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Constituent Related Ones Info</fullName>
                <default>true</default>
                <label>Constituent Related Ones Info</label>
            </value>
            <value>
                <fullName>Constituent Detail Info</fullName>
            </value>
            <value>
                <fullName>Constituent Matching Gift Program Info</fullName>
            </value>
            <value>
                <fullName>Organization Detail Info</fullName>
            </value>
            <value>
                <fullName>Organization Billing Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>