force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Donor_Display_Setting__mdt/fields/ucinn_ascendv2__Donor_Layout__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Donor_Layout__c</fullName>
    <description>The Label Layout for Donor Type</description>
    <inlineHelpText>The layout order the field should render with.</inlineHelpText>
    <label>Donor Layout</label>
    <referenceTo>ucinn_ascendv2__Gift_Processing_Donor_Info_Layout__mdt</referenceTo>
    <relationshipLabel>Gift Processing Donor Display Settings</relationshipLabel>
    <relationshipName>Gift_Processing_Donor_Display_Settings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>