force-app/main/default/objects/ucinn_ascendv2__Gift_Processing_Donor_Display_Setting__mdt/fields/ucinn_ascendv2__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Type__c</fullName>
    <description>The field type of the field to be rendered</description>
    <inlineHelpText>The field type of the field to be rendered</inlineHelpText>
    <label>Field Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REFERENCE-URL</fullName>
                <default>true</default>
                <label>REFERENCE-URL</label>
            </value>
            <value>
                <fullName>READONLY</fullName>
            </value>
            <value>
                <fullName>CURRENCY-READONLY</fullName>
            </value>
            <value>
                <fullName>PHONE-READONLY</fullName>
            </value>
            <value>
                <fullName>PICKLIST-READONLY</fullName>
            </value>
            <value>
                <fullName>DATE-READONLY</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
            <value>
                <fullName>UNESCAPED-HTML</fullName>
            </value>
            <value>
                <fullName>MULTIPICKLIST-READONLY</fullName>
            </value>
            <value>
                <fullName>BOOLEAN-READONLY</fullName>
            </value>
            <value>
                <fullName>DATETIME-READONLY</fullName>
            </value>
            <value>
                <fullName>NUMBER-READONLY</fullName>
            </value>
            <value>
                <fullName>PERCENTAGE-READONLY</fullName>
            </value>
            <value>
                <fullName>RICHTEXT-READONLY</fullName>
            </value>
            <value>
                <fullName>TEXTAREA-READONLY</fullName>
            </value>
            <value>
                <fullName>TIME-READONLY</fullName>
            </value>
            <value>
                <fullName>GEOLOCATION-READONLY</fullName>
            </value>
            <value>
                <fullName>ENCRYPTED-READONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>